added only-allow pnpm

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "pnpm prettier:fix && pnpm lint:fix",
     "lint": "eslint src tests",
     "lint:fix": "pnpm lint --fix",
+    "preinstall": "npx only-allow pnpm",
     "prepublishOnly": "pnpm clean && pnpm build && npm run docgen",
     "prettier": "prettier src tests --check",
     "prettier:fix": "pnpm prettier --write",
